--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,214 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.TestimonialSwipper .swiper-pagination-bullets .swiper-pagination-bullet{
+ background-color: white;
+ opacity: 1;
+ width: 11px;
+ height: 11px;
+}
+.TestimonialSwipper .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: transparent;
+    border: white solid 1px;
+    opacity: 1;
+    width: 11px;
+    height: 11px;
+}
+.OurSuitsTravel{
+    font-size: 14px;
+    color: rgb(24, 24, 24);
+}
+.OurSuitsTravel::before{
+    content: '✅';
+    margin: 5px;
+}
+.react-datepicker .react-datepicker__navigation.react-datepicker__navigation--previous{
+margin: 10px;
+}
+.react-datepicker .react-datepicker__navigation.react-datepicker__navigation--next{
+    margin: 10px;
+    border-radius: 50%;
+    background-color: rgb(236, 235, 235);
+    color: #0a1a3c;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.react-datepicker .react-datepicker__day-name{
+border-color: white;
+margin: 16px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.react-datepicker .react-datepicker__header{
+    background-color: white;
+    margin: 5px;
+}
+.react-datepicker .react-datepicker__current-month{
+font-size: 16px;
+font-weight: 400;
+}
+.react-datepicker .react-datepicker__day.react-datepicker__day--selected{
+    background-color: #0a1a3c;
+    border-radius: 50%;
+}
+.react-datepicker .react-datepicker__day.react-datepicker__day--today{
+   color:#0a1a3c ;
+}
+.react-datepicker .react-datepicker__day.react-datepicker__day--today::after {
+    color: #0a1a3c;
+    content: '.';
+}
+.react-datepicker .react-datepicker__day{
+    background-color: rgb(236, 235, 235);
+    border-radius: 50%;
+    font-weight: 700;
+    font-size: 18px;
+    position: relative;
+    width: 50px;
+    height: 50px; 
+    padding: 10px;
+    margin: 5px;
+}
+.react-datepicker .react-datepicker__day.react-datepicker__day--disabled{
+    background-color: white;
+    border-radius: 0;
+    font-weight: 400;
+}
+.ReviewCard::-webkit-scrollbar{
+    display: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.NAVSHOP:hover :first-child{
+    display: grid;
+}
+.NAVSHOP :first-child {
+    display: none;
+}
+.NAVSHOP :first-child:hover {
+    display: grid;
+}
+
+.NAVFASHION .NAVFASHIONInner:hover{
+    display: flex;
+}
+.NAVFASHION:hover .NAVFASHIONInner{
+    display: flex;
+}
+.NAVFASHION .NAVFASHIONInner{
+ display: none;
+}
+
+.BlogSwipper .swiper-button-prev, .BlogSwipper .swiper-button-next{
+    top:0;
+    position: absolute;
+    z-index: 5;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.cayto-title-separator-wrap {
+    position: relative;
+}
+
+.cayto-title-separator-wrap.cst-title1 {
+    bottom: -30px;
+}
+
+:before,
+:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.cayto-title-separator-wrap:before {
+    border-top: 1px solid #444;
+    top: 15px;
+    content: " ";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 0;
+}
+h2 {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+    margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 30px;
+        vertical-align: baseline;
+            font-family: inherit;
+            font-weight: inherit;
+            font-style: inherit;
+            font-size: 100%;
+            margin: 0;
+            border: 0;
+}
+
+h2 {
+    line-height: 30px;
+    color: #333;
+    font-size: 25px;
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity 0.24s ease-in-out;
+    -moz-transition: opacity 0.24s ease-in-out;
+    transition: opacity 0.24s ease-in-out;
+}
+
+.cayto-title {
+    font-size: 18px;
+    color: #272727;
+}
+
+.cayto-title {
+    font-weight: 400;
+    position: relative;
+    padding-left: 13px;
+}
+
+.cayto-title.cayto-title-separator {
+    background: #fff none repeat scroll 0 0;
+    display: inline-block;
+    margin: 0;
+    padding-right: 14px;
+}
+
+.cayto-title-separator-wrap .cayto-title::before,
+.cayto-title-separator-wrap .cayto-title::after {
+    position: absolute;
+    content: "";
+    top: 13px;
+    right: -4px;
+    height: 5px;
+    width: 5px;
+    background-color: #444;
+    border-radius: 50%;
+}
+
+.cayto-title-separator-wrap .cayto-title::before,
+.cayto-title-separator-wrap .cayto-title span::before {
+    display: none;
+}
+
+.cayto-title-separator-wrap.text-center .cayto-title::before,
+.cayto-title-separator-wrap.text-right .cayto-title::before {
+    display: block;
+    left: -4px;
+    right: auto;
+}
+
+.REVIEWTABS :first-child{
+    gap: 0;
+}
+@media  screen and (max-width:500px) {
+    .REVIEWTABS :first-child {
+    gap: 0;
+    display: flex;
+    flex-direction: row;
+    justify-items: start;
+
+}
 }
